[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=2]

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="Admob" type="Node" parent="."]
script = ExtResource( 2 )
is_real = true
banner_id = "ca-app-pub-3940256099942544/6300978111"
interstitial_id = "ca-app-pub-3940256099942544/1033173712"
rewarded_id = "ca-app-pub-3940256099942544/5224354917"
is_personalized = false
max_ad_content_rate = "G"

[node name="showBanner" type="Button" parent="."]
margin_top = 146.978
margin_right = 180.0
margin_bottom = 166.978
disabled = true
text = "SHOW BANNER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="showInter" type="Button" parent="."]
margin_top = 175.077
margin_right = 180.0
margin_bottom = 195.077
disabled = true
text = "SHOW INSTERSISTICIAL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="showV" type="Button" parent="."]
margin_top = 202.635
margin_right = 180.0
margin_bottom = 222.635
disabled = true
text = "SHOW VPREM"
__meta__ = {
"_edit_use_anchors_": false
}
